Bug 338294 - CorruptedResourceException when adding event in the calendar sample